Targeted the paragraphs in the skills and cleared the right and left so the text no longer wraps around the floted images

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,3 +59,11 @@ h3 {
   float: right;
   margin-left: 30px;
 }
+
+.webdev-skill-description {
+  clear: left;
+}
+
+.it-skill-description {
+  clear: right;
+}
